--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,24 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Frame {
+  display: block;
+  margin:  0px auto;
+  border: 0px solid #ccc;
+  width: 100%;
+  padding: 10px;
+  text-align: center;
+  border-radius: 0px;
+  background: rgba(255, 255, 255, 0.8);
+
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  background: url("./Images/background.jpg") top center fixed;
+  background-size: cover;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+html {
+  overflow-y: scroll;
 }
