Cocktails anzeigen initialisiert und redirect hinzugefügt

--- a/src/components/cocktailsFinden/cocktailFinden.css
+++ b/src/components/cocktailsFinden/cocktailFinden.css
@@ -15,4 +15,25 @@
     width: 30%;
     padding: 0px;
     text-align: left;
+
+}
+
+
+.Shopping {
+    top: 0px;
+    display: inline-block;
+    margin:  20px auto;
+    width: 40%;
+    padding: 0px;
+    text-align: left;
+    vertical-align: top;
+}
+
+.ButtonContainer {
+    display: inline-block;
+    margin:  10px auto;
+    padding: 0px;
+    text-align: left;
+    vertical-align: top;
+
 }
