--- a/src/components/fetchCocktailAnzeigen/fetchCocktail_anzeigen.css
+++ b/src/components/fetchCocktailAnzeigen/fetchCocktail_anzeigen.css
@@ -1,39 +1,22 @@
-.CocktailListElement {
-    display: block;
 
-    border: 1px solid #999;
-    box-shadow: 3px 3px  #888;
-    width: 100%;
-
-    text-align: center;
-    border-radius: 20px;
-
-    height: 190px
+.margin_50px {
+    margin-bottom: 100px;
 }
 
 .CocktailImage {
     display: inline-block;
     width: 150px;
     height: 150px;
-
-    float: right;
-    margin: 20px;
+    float: left;
+    margin: 0px;
 }
 
-.CocktailListElementWrapper {
-    display: block;
-    margin:  10px auto;
-    border: 1px solid #ccc;
-    box-shadow: 0px 3px 3px #ccc;
-    width: 60%;
-    text-align: center;
-    border-radius: 20px;
-}
+
 
 .CocktailListElementDescription{
     display: block;
     width: 60%;
-    height: 150px;
+    height: 200px;
     margin: 20px;
     border-radius: 15px;
     float: left;
@@ -42,5 +25,5 @@
 .img {
     width: 100%;
     height: 100%;
-    border-radius: 15px;
+    border-radius: 10px;
 }
