--- a/src/components/fetchCocktailAnzeigen/fetchCocktail_anzeigen.css
+++ b/src/components/fetchCocktailAnzeigen/fetchCocktail_anzeigen.css
@@ -1,29 +1,32 @@
 
-.margin_50px {
-    margin-bottom: 100px;
-}
-
 .CocktailImage {
     display: inline-block;
-    width: 150px;
-    height: 150px;
-    float: left;
-    margin: 0px;
+    margin: auto;
+    margin-bottom: 40px;
+    float: right;
+
 }
 
 
-
+.ShowMoreButton {
+    display: inline-block;
+    padding: 0px;
+    text-align: center;
+    vertical-align: top;
+    float: left;
+    margin-bottom: 15px;
+}
 .CocktailListElementDescription{
-    display: block;
-    width: 60%;
-    height: 200px;
-    margin: 20px;
-    border-radius: 15px;
-    float: left;
+    color: black;
+    width: 50%;
+    height: auto;
+    margin-left: 25%;
 }
+
 
 .img {
-    width: 100%;
-    height: 100%;
+    width: 150px;
+    height: 150px;
     border-radius: 10px;
+    align-content: center;
 }
