--- a/src/components/Rezepte/Rezept.css
+++ b/src/components/Rezepte/Rezept.css
@@ -3,69 +3,24 @@
     height: 100%;
     border-radius: 15px;
 }
-.Frame {
-    display: block;
-    margin:  0px auto;
-    border: 0px solid #ccc;
-    width: 100%;
-    height: 100%;
-    padding: 10px;
-    text-align: center;
-    border-radius: 0px;
-    background: rgba(255, 255, 255, 0.8);
-
-
-}
 
 .RecipeCocktailImage {
-    display: inline-block;
     width: 20%;
-    height: 20%;
     float: right;
-    margin: 20px;
-    padding: 10px;
+    margin-right: 20%;
 }
 
-.RecipeInfoContainer{
-    display: inline-block;
-    float:left;
-    border-radius: 15px;
-    margin: 20px;
-    padding: 10px;
-    width:70%;
-    text-align: center;
+.Frame {
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.8)
 }
 
-.NeededIngredients{
-    display: inline-block;
-    border-radius: 15px;
-    margin: 0px 20px 20px 20px;
-    padding: 10px;
-    width:70%;
-    border: 1px solid #999;
-    box-shadow: 3px 3px  #888;
+.textField {
+    width: 30%;
+    height: 0%;
+    padding-left: 20%;
+    text-align: left;
+
 }
 
-.MissingIngredients{
-    display: inline-block;
-    border-radius: 15px;
-    margin: 20px;
-    padding: 10px;
-    width:70%;
-    border: 1px solid #999;
-    box-shadow: 3px 3px  #888;
-}
-
-.Preparation {
-    display: inline-block;
-    border-radius: 15px;
-    margin: 20px;
-    padding: 10px;
-    width:70%;
-    border: 1px solid #999;
-    box-shadow: 3px 3px  #888;
-}
-
-.Button {
-    margin: 10px !important;
-}
